<resources>
    <string name="app_name">NOTES APP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_place_holder">Title</string>
    <string name="desc_placeholder">description</string>
    <string name="date_of_note">Date of note</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="save">SAVE</string>
    <string name="add_your_note">Add your note</string>
    <string name="add_to_your_note">add to your note</string>
    <string name="change_your_account_details">Change your account details</string>
    <string name="Changeusername">username</string>
    <string name="emailChange">email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_fragment_text">Movie Fragment</string>
    <string name="movie_search">MOVIE SEARCH</string>
    <string name="save_your_notes">SAVE YOUR NOTES</string>
    <string name="genre">Genre:</string>
    <string name="actors">Actors:</string>
    <string name="director">Director:</string>
    <string name="title_of_the_movie">Title of the movie</string>
    <string name="released">Released</string>
    <string name="imdbRating">imdbRating</string>
    <string name="runtime">Runtime</string>
    <string name="plot">Plot</string>
    <string name="country">country</string>
    <string name="poster">POSTER</string>
    <string name="edit_your_note">EDIT YOUR NOTE</string>
</resources>