<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="7dp"
        app:cardBackgroundColor="#03A9F4"
        android:focusable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:lines="1"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/title_place_holder"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateofnote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:lines="1"
                    android:text="@string/date_of_note"
                    android:textColor="#263238" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="319dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/desc_placeholder"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/delete_note"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/lightblue"
                    android:minWidth="48dp"
                    app:icon="@drawable/ic_add_for_notedelete"
                    app:iconTint="#000000"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>